:white_check_mark: Correxiones scorm

--- a/contenido/pag29.html
+++ b/contenido/pag29.html
@@ -320,7 +320,7 @@
                             <p>Da clic para comenzar la evaluación final.
                             </p>
                         </div>
-                        <figure class="cont-imagen">
+                        <figure class="cont-imagen" id="btnEval1">
                             <img class="cuaderno" src="./build/img/contenido/Pag27/libreta.svg" alt="medalla">
                         </figure>
                     </cont>
@@ -579,7 +579,7 @@
                             <p>Da clic para comenzar la evaluación final.
                             </p>
                         </div>
-                        <figure class="cont-imagen">
+                        <figure class="cont-imagen" id="btnEval2">
                             <img class="cuaderno" src="./build/img/contenido/Pag27/libreta.svg" alt="medalla">
                         </figure>
                     </cont>
@@ -862,7 +862,7 @@
                             <p>Da clic para comenzar la evaluación final.
                             </p>
                         </div>
-                        <figure class="cont-imagen">
+                        <figure class="cont-imagen" id="btnEval3">
                             <img src="./build/img/contenido/Pag27/libreta.svg" alt="medalla">
                         </figure>
                     </cont>
