--- a/contenido/pag30.html
+++ b/contenido/pag30.html
@@ -57,10 +57,10 @@
                     <div class="parrafo">
                         <p>¡No dejes de utilizar tus habilidades y continúa atento a cualquier conducta sospechosa a tu alrededor!</p>
                     </div>
-                    <div class="botones">
+                    <!-- <div class="botones">
                         <a href="" id="registrar">Registrar</a>
                         <a href="" id="cerrar">Cerrar</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
